[tool.poetry]
name = "waist-measurement-app"
version = "0.1.0"
description = "A Flask-based web application to manage patient waist measurements."
authors = ["PhyoPaingAYe <your.ferhat241@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"
Flask-SQLAlchemy = "^3.0.5"
Flask-Babel = "^3.1.0"
gunicorn = "^20.1.0"
Werkzeug = "^2.3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
